--- a/style.css
+++ b/style.css
@@ -15,10 +15,10 @@ button {
   color: hsla(0, 0%, 100%, 0.96);
   font-size: 1.2rem;
   font-weight: 600;
-  padding: 0.5rem 1rem;
+  padding: 1rem;
   background-color: rgb(255, 56, 92);
   border: none;
-  border-radius: 0.5rem;
+  border-radius: 1rem;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 25px 20px -20px;
 }
 
@@ -34,10 +34,10 @@ body {
 
 /* section/element styles */
 .gameboard {
-  width: calc(100vw - 3rem);
-  height: calc(100vh - 3rem);
+  width: calc(100%);
+  height: calc(100%);
   padding: 0;
-  margin: auto;
+  margin: 0;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 2fr 0.75fr 2fr;
@@ -47,7 +47,7 @@ body {
 .gameboard__computer,
 .gameboard__user {
   width: 100%;
-  padding: 2rem;
+  padding: 1.5rem;
   margin: 0;
   display: flex;
   flex-direction: column;
@@ -58,13 +58,14 @@ body {
     rgba(255, 56, 92, 0.04) 30%,
     rgba(255, 56, 92, 0.5)
   );
-  border-radius: 2.5rem;
+  border-radius: 2rem;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 25px 20px -20px;
 }
 
 .gameboard__computer-selection,
 .gameboard__user-selection {
-  font-size: 2.488rem;
+  font-size: 2.986rem;
+  font-weight: 800;
   width: 100%;
   flex-grow: 1;
   display: flex;
@@ -87,9 +88,7 @@ body {
 
 .gameboard__btn-wrapper {
   width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   gap: 0.5rem;
 }
