--- a/style.css
+++ b/style.css
@@ -47,9 +47,10 @@ body {
 
 .gameboard {
   width: 100%;
+  max-width: 480px;
   height: 100%;
   padding: 1rem;
-  margin: 0;
+  margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 2fr 0.75fr 2fr;
