--- a/style.css
+++ b/style.css
@@ -26,6 +26,11 @@ button {
   box-shadow: rgba(0, 0, 0, 0.16) 0px 25px 20px -20px;
 }
 
+button:disabled {
+  color: rgba(255, 255, 255, 0.88);
+  background-color: rgba(255, 56, 92, 0.56);
+}
+
 /* typography styles */
 html,
 body {
